5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1577_1331.log
== TEST (2019-03-14 19:34:01) 
-- CODE:
(50//4%)
-- ERROR:
File "XXXX", line 1
    (50//4%)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:34:12) 
-- CODE:
(50//4 %)
-- ERROR:
File "XXXX", line 1
    (50//4 %)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:34:21) 
-- CODE:
print (50//4 %)
-- ERROR:
File "XXXX", line 1
    print (50//4 %)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:35:00) 
-- CODE:
print (50%4)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:35:27) 
-- CODE:
print (50%4)
-- EXECUTION TIME:
0.16132
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:35:36) 
-- CODE:
 (50%4)
-- ERROR:
File "XXXX", line 1
    (50%4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:36:07) 
-- CODE:
print (50%4)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:36:24) 
-- CODE:
print (50//%4)
-- ERROR:
File "XXXX", line 1
    print (50//%4)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:37:02) 
-- CODE:
print (50//4)
print (50%4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:31) 
-- CODE:
print (50//4)
print (50%4)
-- EXECUTION TIME:
0.175121
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:37:34) 
-- CODE:
print (50//4)
print (50%4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:37) 
-- CODE:
print (50//4)
print (50%4)
-- EXECUTION TIME:
0.129956
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:37:48) 
-- CODE:
print (50//4)
print  (50%4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:52) 
-- CODE:
print (50//4)
print  (50%4)
-- EXECUTION TIME:
0.125193
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:38:01) 
-- CODE:
print (50/4)
print  (50%4)
-- OUTPUT:
12.5
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:09) 
-- CODE:
print (50/4)
print (50%4)
-- EXECUTION TIME:
0.152964
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:38:11) 
-- CODE:
print (50/4)
print (50%4)
-- OUTPUT:
12.5
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:38:22) 
-- CODE:
print (50//4)
print (50%4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:43) 
-- CODE:
print (50//4)
print (50%4)
-- EXECUTION TIME:
0.156912
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:39:01) 
-- CODE:
print (50//4)
print (50 % 4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:39:03) 
-- CODE:
print (50//4)
print (50 % 4)
-- EXECUTION TIME:
0.137373
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:39:14) 
-- CODE:
 (50//4)
 (50 % 4)
-- ERROR:
File "XXXX", line 1
    (50//4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:39:26) 
-- CODE:
print  (50//4)
print  (50 % 4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:39:51) 
-- CODE:
print  (50//4)
print  (50 % 4)
-- EXECUTION TIME:
0.147845
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:40:04) 
-- CODE:
print(50//4)
print(50 % 4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:06) 
-- CODE:
print(50//4)
print(50 % 4)
-- EXECUTION TIME:
0.158107
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:40:15) 
-- CODE:
print(50//4)
print(50%4)
-- OUTPUT:
12
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:18) 
-- CODE:
print(50//4)
print(50%4)
-- EXECUTION TIME:
0.147836
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:40:29) 
-- CODE:
print(50//3)
print(50%4)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:32) 
-- CODE:
print(50//3)
print(50%4)
-- EXECUTION TIME:
0.199794
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
